--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "ask_ai"
 version = "0.1.0"
 edition = "2021"
+description = "A library for interacting with various AI frameworks"
+license = "MIT"
 
 [lib]
 name = "ask_ai"
