--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 description = "A library for interacting with various AI frameworks"
 license = "MIT"
-authors = "Eduardo Neville <eduardoneville82@gmail.com>"
+authors = ["Eduardo Neville <eduardoneville82@gmail.com>"]
 readme="README.md"
 repository = "https://github.com/EduardoNeville/ask_ai"
 
