--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,14 @@ path = "src/lib.rs"
 
 [dependencies]
 
-tokio = { version = "1.0", features = ["full"] }
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1.0", features = ["derive"] }
-
+serde_json = "1.0.140"
+reqwest = { version = "0.12.19", features = ["json", "blocking", "rustls-tls"] }
 anyhow = "1.0"
-
-openai-api-rs = "5.2.4"
-anthropic-rs = "0.1.7"
 ollama-rs = "0.2.0"
+
+[dev-dependencies]
+httpmock = "0.7.0"
+serial_test = "2"
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
